[project]
name = "semv"
authors = [
  {name = "Ingo Fruend", email = "github@ingofruend.net"},
]
readme = "README.md"
license = { text = "BSD-3-Clause"}
keywords = ["Semantic Versioning"]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
semv = "semv.main:main"

[tools.setuptools_scm]
